# fibered

./: .gitignore  README.md  example_cylinder.ipynb  example_klein.ipynb  example_moebius.ipynb  example_torus.ipynb  pyproject.toml
src/: fibred.py  plot.py  topologicalobstructions.py
src/fibered/: topologicalobstructions.py
tests/: test_fibered.py
